# TOPSIS-Data-Science

./: .env.example  .gitignore  CONCEPTS.md  LICENSE  README.md  pyproject.toml  topsis_web.py
.history/: README_20260118113722.md  README_20260118113727.md  README_20260118114033.md
topsis_angad/: __init__.py  core.py
topsis_surya/: __init__.py  core.py
