[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Topsis-SURYA-102303737"
version = "0.1.0"
description = "TOPSIS CLI implementation by SURYA KANT TIWARI (102303737)"
readme = "README.md"
authors = [{name = "SURYA KANT TIWARI", email = "suryaktiwari11@users.noreply.github.com"}]
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy>=1.24", "pandas>=2.0"]

[project.scripts]
topsis-cli = "topsis_surya.core:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["topsis_surya*"]

